# cinit

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
doc/: Integration.md  README.md
legal/: Ben-Fiedler.txt  Jan-Veen.txt
scripts/container/: compile-libcap  test
scripts/local/: build
src/: cli_parser.rs  config_parser.rs  main.rs  process_tree.rs  startup_checks.rs
src/analyse/: mod.rs  process_builder.rs  process_manager_builder.rs
src/config/: config.rs  config_parser.rs  mod.rs  process_tree.rs
src/logging/: mod.rs  stderr.rs  stdout.rs
src/programs/: harness.rs
src/runtime/: .cronjob.rs.rustfmt  cronjob.rs  dependency_graph.rs  ioctl.rs  libc_helpers.rs  mod.rs  process.rs  process_builder.rs  process_manager.rs  process_manager_builder.rs  process_map.rs
src/runtime/process_manager/: mod.rs  notify_manager.rs  status_reporter.rs
src/util/: libc_helpers.rs  mod.rs
system-tests/: driver.py  test  test_driver.py
system-tests/child-dump/: first.yml  fourth.yml  second.yml  third.yml
system-tests/usecases/arg-template-warn-template/: __init__.py
system-tests/usecases/arg-templates/: __init__.py
system-tests/usecases/cap-test/: __init__.py
system-tests/usecases/capabilities/: __init__.py
system-tests/usecases/children-can-handle-sigchld/: __init__.py
system-tests/usecases/conf-directory/: __init__.py
system-tests/usecases/cronjob/: __init__.py
system-tests/usecases/cronjob-with-after-dependency/: __init__.py
system-tests/usecases/cronjob-with-before-dependency/: __init__.py
system-tests/usecases/cronjobs-between-regular-programs/: __init__.py
system-tests/usecases/cyclic-dependency/: __init__.py
system-tests/usecases/cyclic-dependency-in-middle/: __init__.py
system-tests/usecases/different-workdir/: __init__.py
system-tests/usecases/drop-in-configuration/: __init__.py
system-tests/usecases/duplicate-program-name/: __init__.py
system-tests/usecases/env-sanitisation/: __init__.py
system-tests/usecases/exit-on-crash/: __init__.py
system-tests/usecases/full-test/: __init__.py
system-tests/usecases/invalid-config/: __init__.py
system-tests/usecases/invalid-user-group-as-string/: __init__.py
system-tests/usecases/missing-env-forwarding/: __init__.py
system-tests/usecases/notify-changed-mainpid/: __init__.py
system-tests/usecases/notify-processes/: __init__.py
system-tests/usecases/path-lookup/: __init__.py
system-tests/usecases/single-dependency/: __init__.py
system-tests/usecases/supplementary-groups-are-empty/: __init__.py
system-tests/usecases/template-env-var-invalid/: __init__.py
(+41 files in other folders)
