[package]
name = "cinit"
version = "1.6.3"
authors = ["Maximilian Falkenstein <uubk@users.noreply.github.com>",
           "Jan Veen <jan.veen@posteo.de>",
           "Ben Fiedler <ben@sjfiedler.de>"]
description = "Init program for UNIX processes"
license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = "4.0.13"
log = "0.4.11"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_yaml = "0.9.13"
libc = "0.2.79"
petgraph = "0.6.0"
tera = "1.5.0"
chrono = "0.4.19"
log4rs = "1.0.0"
caps = "0.5.2"

[dependencies.nix]
version = "0.28.0"
features = ["signal", "user", "fs", "term", "ioctl", "socket", "uio", "event"]

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "git2"] }
