[package]
name = "cinit"
version = "1.6.3"
authors = ["Maximilian Falkenstein <uubk@users.noreply.github.com>",
           "Jan Veen <jan.veen@posteo.de>",
           "Ben Fiedler <ben@sjfiedler.de>"]
description = "Init program for UNIX processes"
license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.0.13", features = ["string"] }
log = "0.4.11"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_yaml = "0.9.13"
libc = "0.2.79"
petgraph = "0.7.1"
tera = "1.5.0"
chrono = "0.4.19"
log4rs = "1.0.0"
caps = "0.5.2"

[dependencies.nix]
version = "0.29.0"
features = ["signal", "user", "fs", "term", "ioctl", "socket", "uio", "event"]

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }
